# lvmscp

./: CHANGELOG.md  Dockerfile  README.md  codecov.yml  coverage.xml  pyproject.toml  readthedocs.yml
.github/workflows/: docker.yml  lint.yml  release.yml  test.yml
docs/sphinx/: commands.rst  conf.py  getting-started.rst  index.rst
python/lvmscp/: __init__.py  __main__.py  controller.py  delegate.py  dli.py  ln2.py  module.py
python/lvmscp/actor/: __init__.py  actor.py  supervisor.py
python/lvmscp/actor/commands/: __init__.py  etr.py  expose.py  focus.py  hardware_status.py
python/lvmscp/etc/: LVM_100kHz.acf  lvmscp.yml  schema.json
tests/: conftest.py  test_actor.py  test_command_focus.py  test_command_hardware_status.py  test_delegate.py  test_lvmscp.yml  test_status.py
