[project]
name = "sdss-lvmscp"
version = "0.9.2a0"
description = "LVM spectrograph control package."
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" },
    { name = "Changgon Kim", email = "changgonkim@khu.ac.kr" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "sdss-archon>=0.14.0"
]

[project.optional-dependencies]
fitsio = ["fitsio>=1.2.2"]

[project.scripts]
lvmscp = "lvmscp.__main__:main"

[project.urls]
Homepage = "https://github.com/sdss/lvmscp"
Repository = "https://github.com/sdss/lvmscp"
Documentation = "https://sdss-lvmscp.readthedocs.org"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "ipdb>=0.12.3",
    "ruff>=0.5.0"
]
docs = [
    "Sphinx>=8.0.0",
    "furo>=2021.9.22",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "sphinx-autodoc-typehints>=1.23.2",
    "doc8>=0.8.0",
    "rstcheck>=3.3.1"
]
test = [
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0"
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = ["**/*.pyi"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["ifoo"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "archon"]

[tool.pyright]
include = ["python/lvmscp", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "--cov lvmscp --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
syncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
omit = [
    "python/lvmscp/__main__.py",
    "python/lvmscp/ln2.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["python/lvmscp"]

[tool.hatch.build.targets.wheel]
packages = ["python/lvmscp"]
